hphp/hack/test/typecheck/reactive/only_rx_if_args1.php
<?hh // strict

// ERROR
<<__OnlyRxIfArgs>>
function f((function(): int) $s): void {
}
